--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "nightwatch-saucelabs-endsauce",
-  "version": "1.0.0",
-  "description": "Nightwatch.js custom command for running Nightwatch.js tests against SauceLabs.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
+    "name": "nightwatch-saucelabs-endsauce",
+    "version": "1.0.0",
+    "description": "Nightwatch.js custom command for running Nightwatch.js tests against SauceLabs.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
     "Nightwatch.js",
     "nightwatch",
     "SauceLabs",
     "selenium",
     "grid"
   ],
-  "author": "David Mello (https://www.davidmello.com)",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/reallymello/nightwatch-saucelabs-endsauce.git"
-  },
-  "bugs": {
-    "url": "https://github.com/reallymello/nightwatch-saucelabs-endsauce/issues"
-  },
-  "homepage": "https://github.com/reallymello/nightwatch-saucelabs-endsauce#readme"
+    "author": "David Mello (https://www.davidmello.com)",
+    "license": "Apache-2.0",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/reallymello/nightwatch-saucelabs-endsauce.git"
+    },
+    "bugs": {
+        "url": "https://github.com/reallymello/nightwatch-saucelabs-endsauce/issues"
+    },
+    "homepage": "https://github.com/reallymello/nightwatch-saucelabs-endsauce#readme",
+    "dependencies": {
+        "saucelabs": "^4.4.4"
+    }
 }
